# super-trade

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  buf.gen.python.yaml  pyproject.toml
.claude/skills/ruff-fix/: SKILL.md
.github/workflows/: ci.yml  deploy-docs.yml
dashboard/: app.py
dashboard/pages/: 1_Backtest.py
docker/: Dockerfile.ray
examples/: README.md  event_driven_backtest.py  export_foxglove.py  live_foxglove.py  periodic_rebalance.py  selection_backtest.py  vectorized_backtest.py
scripts/: debug_akshare.py  seed_sandbox.py
src/super_trade/: observability.py
src/super_trade/backtest/: __init__.py  costs.py  engine.py  registry.py  result.py  strategies.py  strategy.py
src/super_trade/data/: __init__.py  clickhouse_store.py  loaders.py  models.py  resample.py  store.py
src/super_trade/execution/: __init__.py  broker.py  engine.py  event_driven.py  market.py  qmt_broker.py  report.py  risk.py  sim_broker.py
src/super_trade/foxglove/: __init__.py  export.py  live.py
src/super_trade/foxglove/_proto/supertrade/v1/: trade_pb2.py  trade_pb2.pyi
src/super_trade/ingest/: __init__.py  backfill.py  rate_limit.py
src/super_trade/metrics/: __init__.py  momentum.py  returns.py  summary.py  trend.py  volatility.py  volume.py
src/super_trade/portfolio/: __init__.py  allocator.py  rebalance.py
src/super_trade/runner/: __init__.py  base.py  multiprocess.py  ray_runner.py  report.py  simple.py  spec.py
src/super_trade/selection/: __init__.py  features.py  filters.py  scorers.py  selector.py
src/super_trade/sources/: __init__.py  akshare_source.py  base.py  qmt_source.py
src/super_trade/viz/: __init__.py  charts.py
tests/: conftest.py  factories.py  fakes.py  test_backfill.py  test_backtest.py  test_charts.py  test_clickhouse_store.py  test_event_driven.py  test_execution.py  test_fake_store.py  test_foxglove.py  test_market_realism.py  test_metrics.py  test_models.py  test_portfolio.py  test_qmt_symbols.py  test_registry.py  test_resample.py  test_runner.py  test_selection.py  test_summary.py
website/: docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js
website/docs/: architecture.md  architecture.mdx  concepts.mdx  getting-started.md  intro.md  intro.mdx
website/docs/layers/: backtest.md  data.md  execution.md  execution.mdx  ingest.md  metrics.md  selection.mdx  sources.md  viz.md
website/i18n/zh-Hans/: code.json
website/i18n/zh-Hans/docusaurus-plugin-content-docs/: current.json
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: architecture.mdx  concepts.mdx  getting-started.md  intro.mdx
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/layers/: backtest.md  data.md  execution.md  execution.mdx  ingest.md  metrics.md  selection.mdx  sources.md  viz.md
website/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
website/src/components/ArchitectureDiagram/: index.jsx
website/src/components/BridgeDiagram/: index.jsx
website/src/components/ConceptDiagram/: index.jsx
website/src/components/FlowDiagram/: index.jsx
