[project]
name = "super-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "clickhouse-connect>=1.3.0",
    "logfire>=4.37.0",
    "mcap>=1.4.0",
    "mcap-protobuf-support>=0.5.4",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running ClickHouse server (uses the super_trade_test DB)",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Generated protobuf bindings (buf generate) — don't lint/format machine code.
extend-exclude = ["src/super_trade/foxglove/_proto"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming,
# UP: pyupgrade, B: bugbear, SIM: simplify, RUF: ruff-specific
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
