[project]
name = "super-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "clickhouse-connect>=1.3.0",
    "foxglove-websocket>=0.1.4",
    "logfire>=4.37.0",
    "mcap>=1.4.0",
    "mcap-protobuf-support>=0.5.4",
    "plotly>=6.8.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running ClickHouse server (uses the super_trade_test DB)",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Generated protobuf bindings (buf generate) — don't lint/format machine code.
extend-exclude = ["src/super_trade/foxglove/_proto"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming,
# UP: pyupgrade, B: bugbear, SIM: simplify, RUF: ruff-specific
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
# Type-check the package and its tests. Presentation/demo code (dashboard,
# examples, scripts) is intentionally out of scope.
files = ["src", "tests"]
# Generated protobuf bindings (buf generate) — don't type-check machine code.
exclude = ['src/super_trade/foxglove/_proto/']
strict = true
# Third-party libs (akshare, xtquant, clickhouse-connect, streamlit, …) ship no
# type stubs; don't fail on their missing imports.
ignore_missing_imports = true
warn_unreachable = true

# xtquant is imported lazily and only exists on a MiniQMT box; never installed here.
[[tool.mypy.overrides]]
module = "xtquant.*"
ignore_missing_imports = true

# mcap ships types but its namespace packaging trips mypy's duplicate-module
# check ("Source file found twice") — don't follow into it.
[[tool.mypy.overrides]]
module = "mcap.*"
follow_imports = "skip"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
